<resources>
    <string name="app_name">Moodle</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="register1">Register</string>
    <string name="welcome_user">Welcome Nigga!</string>
</resources>
