<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background3">

    <ImageView
        android:layout_height="300dp"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo"/>
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingStart="1dp"
        android:drawableStart="@drawable/username"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/password"
        android:hint="@string/Password"/>

    <RadioGroup
        android:id="@+id/fac_stu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:checked="true"
            android:text="@string/faculty" />

        <RadioButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/student" />


    </RadioGroup>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/login"
        android:text="@string/Login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>